Formatted page, added functionality

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,11 +1,64 @@
 body {
   background-color: #98ddca;
   color: #d5ecc2;
+  font-family: 'Itim', cursive;
+}
+
+h1 {
+  text-shadow: gray 0px 5px 10px;
+  font-size: 3rem;
+}
+
+p {
+  margin: 0;
 }
 
 .main-box{
-background: linear-gradient(45deg, #ffaaa7, #ffd3b4);
+background: linear-gradient(180deg, #ffaaa7, #ffd3b4);
+border-radius: 10px;
 width: 33%;
 margin: auto;
 text-align: center;
+}
+
+.item-form {
+width: 45%;
+font-size: 1.5rem;
+border: none;
+border-radius: 30px;
+text-align: center;
+background-color: #d5ecc2;
+font-family: 'Itim', cursive;
+margin-bottom: 20px;
+
+}
+
+.user-item {
+display: flex;
+background-color: #d5ecc290;
+color: gray;
+font-size: 1.5rem;
+text-align: center;
+width: 100%;
+box-sizing: border-box;
+}
+
+.cell{
+padding: 5px 20px;
+width: 45%;
+}
+
+button {
+  border: none;
+  background-color: #d5ecc290;
+  font-family: 'Itim', cursive;
+  padding: 5px 12px;
+  border-radius: 100%;
+
+}
+
+footer {
+  margin-top: 100px;
+  text-align: center;
+  color: gray;
 }
