--- a/views/shopping.ejs
+++ b/views/shopping.ejs
@@ -4,10 +4,26 @@
     <meta charset="utf-8">
     <title>Shopping List</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="main-box">
-<h1>hi</h1>
+<h1>Shopping List</h1>
+<% for (var i=0; i<userItemList.length; i++){ %>
+  <div class="user-item">
+    <p class="cell"> <%= userItemList[i] %> </p>
+    <p class="cell"> <%= userItemQuant[i] %> </p>
+  </div>
+<% } %>
+<form action="/" method="post">
+  <input class="item-form" type="text" name="userItem" placeholder="Add items here..." autocomplete="off">
+  <input class="item-form" type="number" name="userQuant" placeholder="Quantity">
+  <button type="submit" name="button">+</button>
+</form>
+
     </div>
+
   </body>
+  <footer>&copy; Copyright 2021 Nia Hamilton</footer>
 </html>
